# logstream

./: README.md  pyproject.toml
src/block1/: first.py  fourth.py  second.py  thrid.py
src/block2/: cinco.py  dos.py  quatro.py  tres.py  uno.py
src/block3/: 1.py  2.py  3.py  4.py
src/block4/: 1.py  2.py  3.py  4.py  5.py
src/block5/: 1.py  1var_bibl.py  2.py  pyproject.toml
src/block6/: average_sum.py  factorial.py  merge_and_write.py
src/block6/tests/: conftest.py  test_average_sum.py  test_merge_and_write.py
src/block6/unit_tests/: test_factorial.py
src/task1/: first.py  fourth.py  second.py  thrid.py
