[project]
name = "logstream-course"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mizerael", email = "dan-acer@outlook.com" }
]
dependencies = [
    "pytest>=8.3.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"task1_1" = "src.block1.first:task1"
"task1_2" = "src.block1.second:task2"
"task1_3" = "src.block1.thrid:task3"
"task1_4" = "src.block1.fourth:task4"
"task1_4_1" = "src.block1.fourth:task4_1"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.7.1",
    "pre-commit>=4.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 80
